--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <title>Document</title>
 </head>
 <body>
-
-
-
 <div class="wrapper">
     <header class="header">
         <div class="header-container clearfix">
@@ -46,7 +43,7 @@
                         <span>Extraordinary art director & creative minimalism lover</span>
                     </div>
                     <button class="btn btn-title">
-                        <a href="#">
+                        <a href="">
                             <img src="img/button.png" alt="button">
                         </a>
                     </button>
